# nemo

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  container-lite.sh  mem_bw.sh
.github/workflows/: sw_build.yml  sw_ci.yml  sw_format.yml  sw_unit_test.yml
analysis/: cxl_heatmap.py  migration_stats.py  pebs_trace.ipynb  pebs_trace.py  pin_trace.ipynb  process_flexkvs.py  process_gap_bc.py  process_logs.py
analysis/plots/faster_ycsb_a_new/: setup.md
analysis/plots/faster_ycsb_e_new_sampling_1024/: setup.md
analysis/plots/faster_ycsb_e_new_sampling_256/: setup.md
analysis/plots/faster_ycsb_f_new_zipf_2/: setup.md
apps/flexkvs/: Makefile
apps/flexkvs/bench/: main.c  workload.c
apps/flexkvs/server/: ialloc.c
bench/: common.c  common.h
bench/ucm/: dsa_memcpy_async.c  dsa_memcpy_sz.c  wp_migration.c
ci/: Dockerfile
cmake/: config.ci  config.cmake  config.default  gen_config_template.cmake  options.cmake  validate_opts.cmake
config/: dsa_memcpy_profile.conf
ctl/: .gitignore  Makefile  antagonist.c  mbm_poll.c
docs/: design.md  ycsb.md
exp_scripts/: config.sh  nemo_shim.sh
exp_scripts/faster/: build.sh  config.sh  config_ci.sh  ycsb_run.sh  ycsb_run_a.sh  ycsb_run_b.sh  ycsb_run_c.sh  ycsb_run_e.sh  ycsb_run_f.sh
exp_scripts/flexkvs/: parse_results.py  run.sh
exp_scripts/gap/: build.sh
exp_scripts/gap/bc/: config.sh  run.sh
exp_scripts/gap/bfs/: run.sh
exp_scripts/gap/cc/: config.sh  run.sh
exp_scripts/gap/cc_sv/: config.sh  run.sh
exp_scripts/gap/pr/: config.sh  run.sh
exp_scripts/gap/sssp/: config.sh  run.sh
exp_scripts/gap/tc/: config.sh  run.sh
exp_scripts/gups/: run.sh  run_gups_simplified.sh
exp_scripts/memcached/: start.sh  ycsb_load.sh  ycsb_run.sh
exp_scripts/redis/: start.sh  ycsb_load.sh  ycsb_run.sh
exp_scripts/silo/: build.sh  config.sh  install_deps.sh  run.sh
exp_scripts/spark/: hibench_build.sh  hibench_run_wc.sh
exp_scripts/voltdb/: README.md  build.sh  tpcc_init_server.sh  tpcc_run_client.sh  tpcc_run_server.sh
fpga/: .gitignore  README.md  filelist.txt  lib_filelist.txt  run_sim.do  run_sim.sh  view_sim.do  view_sim.sh  view_wave.sh
fpga/.github/workflows/: fpga_build.yml  fpga_ci.yml  host_build.yml
fpga/docs/: ci.md  cxl_dax_setup.md  sim.md
fpga/host/: .gitignore  Makefile  setup_cxl_as_dax.sh
fpga/host/memmod/: .Module.symvers.cmd  .memtest_module.ko.cmd  .memtest_module.mod.cmd  .memtest_module.mod.o.cmd  .memtest_module.o.cmd  .modules.order.cmd  Makefile  load_module.sh  memtest_module.c  memtest_module.mod  memtest_module.mod.c  modules.order  unload_module.sh
fpga/host/scripts/: install_deps.sh
fpga/host/src/: bytes.c  clear_cache.c  consistency.c  ctrlreg.c  dax_access.c  devmem_access.c  devmem_consistency.c  different_mmap.c  fpga_regs.c  interpret_ar.c  make_crash.c  make_crash_2.c  make_crash_3.c  make_crash_check.c  make_crash_simple.c  make_crash_simple_dax.c  numa_access.c  page_counter_access.c  probe.c  read_arlog.c  read_counter.c  timeit.c
fpga/patches/: afu_top.sv.patch  afu_top_tb.sv.patch  afu_top_tb_axilite_interface.sv.patch  axi_slave_example.sv.patch  cxltyp3_memexp_ddr4_top.qsf.patch
fpga/scripts/: build.sh  check_syntax.sh  program_fpga.sh  sof_to_pof.sh
fpga_ctl/: README.md  print.c  print.h
libs/cxl-dev/: cxl-dev.c
libs/cxl-dev/include/cxl-dev/: cxl-dev.h
libs/ipc-chan/: client.c  common.c  server.c
libs/ipc-chan/include/ipc-chan/: client.h  common.h  server.h
libs/util/: bitmap.c  bitops.c  fs.c  log.c  proc.c  thread.c  timer.c
libs/util/include/util/: bitmap.h  bitops.h  bug.h  compiler.h  fs.h  log.h  proc.h  shared.h  thread.h  timer.h  type-assert.h
microbenchmarks/: .gitignore  README.md  gups.h
microbenchmarks/data/: gups-colocate.sh  gups-fail-target.sh  gups-fair.sh  miss-ratio-colocate.sh  miss-ratio-fail-target.sh  miss-ratio-fair.sh
microbenchmarks/scripts/: analyze_addrs.py  analyze_indices.sh  analyze_times.py  extract_histogram.py  migrate_rate_sensitivity.sh  run-colocate.sh  run-equal.sh  run-fail-target.sh  run-perf.sh  run-static-colocate.sh  run-warmset-znuma.sh  run-warmset.sh  run.sh
platform/docker/: README.md
scripts/: format.sh  post_boot_setup.sh  post_boot_setup_shm.sh  run_perf.sh  run_unit_tests.sh
src/: lib_mmap_populate.c
src/app/: hemem-app.c  hemem-app.h  interpose.c  interpose.h  ipc.c  ipc.h  mmap.c  mmap.h  physmem.c  physmem.h  remap.c  remap.h  uffd.c  uffd.h
src/shared/: hemem-shared.h  ipc-shared.h
src/ucm/: core-util.c  core-util.h  core.c  core.h  epoll-util.c  epoll-util.h  main.c  migration.c  migration.h  mm-async.c  mm-async.h  mm.c  mm.h  proc-mgr.c  proc-mgr.h  signal-handler.c  signal-handler.h  ucm-config.h  ucm.c  ucm.h  uffd.c  uffd.h
src/ucm/ds/: fifo.c  fifo.h  pa-proc-map.c  pa-proc-map.h  page-iterator.c  page-iterator.h  proc-array.c  proc-array.h  spsc-ring.c  spsc-ring.h  uthash.h
src/ucm/ipc/: ipc.c  ipc.h  qemu.c  qemu.h
src/ucm/opts/: opts-list.c  opts-list.h  opts.c  opts.h  parse_impl.c  parse_impl.h
src/ucm/physmem/: config.h  dax.c  dax.h  physmem.c  physmem.h  shm.c  shm.h
src/ucm/policy/: alloc.c  alloc.h  fair-share.c  fair-share.h  migrate.c  migrate.h  policy-interface.h  policy-state.c  policy-state.h  policy.c  policy.h  qos.c  qos.h  random-evict.c  random-evict.h
src/ucm/stats/: cxl-stats.c  cxl-stats.h  pebs-stats.c  pebs-stats.h  printer.c  printer.h  stats.c  stats.h
src/ucm/support/: container.c  container.h  dsa.c  dsa.h  memcpy-par.c  memcpy-par.h  memops-offload.c  memops-offload.h  memops.c  memops.h
src/ucm/telem/: engine.c  engine.h
src/ucm/type/: page.c  page.h  process.c  process.h
tests/e2e/: mmap_shared.c
tests/e2e_scripts/: run.sh
tests/e2e_scripts/faster_ycsb_a/: config.sh  run.sh
tests/shared/: test_logging.c
tests/ucm/ds/: test_pa_proc_map.c
tests/ucm/support/: test_cxl_dev.c  test_dsa.c
vm_exp/: .gitignore  README.md  mk_cidata.sh  mk_disk_img.sh  vm.conf.example  vm_incoming.sh  vm_login.sh  vm_start.sh
vm_exp/cidata/: meta-data  user-data.template
(+69 files in other folders)
